<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_activity_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/blek_main_root"
    tools:openDrawer="start"
    tools:context="ch.epfl.balelecbud.WelcomeActivity">

    <!-- 1 | Main RootView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/root_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blek_blue"
            app:theme="@style/ToolBarStyle"/>

        <!-- FrameLayout for our fragments -->
        <FrameLayout
            android:id="@+id/root_activity_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>
    </LinearLayout>

    <!-- 2 | NavigationView -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/root_activity_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/blek_blue"
        app:headerLayout="@layout/root_activity_nav_header"
        app:itemTextAppearance="@style/blek_font_style"
        app:menu="@menu/root_activity_menu_header"
        app:itemIconTint="@color/blek_orange" />

</androidx.drawerlayout.widget.DrawerLayout>
