...
        <item
            android:id="@+id/fragment_main_drawer_home"
            android:icon="@drawable/icon_home"
            android:title="@string/drawer_home" />

        <item
            android:id="@+id/fragment_main_drawer_schedule"
            android:icon="@drawable/icon_schedule"
            android:title="@string/drawer_schedule" />

        <item
            android:id="@+id/fragment_main_drawer_info"
            android:icon="@drawable/icon_information"
            android:title="@string/drawer_festival_information" />

        <item
            android:id="@+id/fragment_main_drawer_map"
            android:icon="@drawable/icon_map"
...
