...
            android:drawablePadding="@dimen/text_view_drawable_padding"
            android:fontFamily="@font/proxima_nova"
            android:textSize="@dimen/rv_item_text"
            android:textColor="@android:color/white" />

        <Switch
            android:id="@+id/ScheduleSubscribeSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:checked="false"
            android:drawableStart="@drawable/icon_concert_soon"
...
