<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:layout_height="match_parent"
    android:layout_width="400dip">

    <item>
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_info"
                    android:icon="@mipmap/info"
                    android:title="Information" />
                <item
                    android:id="@+id/activity_main_drawer_schedule"
                    android:icon="@mipmap/schedule"
                    android:title="Schedule" />
                <item
                    android:id="@+id/activity_main_drawer_poi"
                    android:icon="@mipmap/point_of_interest"
                    android:title="Points of Interest" />
                <item
                    android:id="@+id/activity_main_drawer_map"
                    android:icon="@mipmap/map"
                    android:title="Map" />
                <item
                    android:id="@+id/activity_main_drawer_transport"
                    android:icon="@mipmap/bus"
                    android:title="Transport" />
                <item
                    android:id="@+id/activity_main_drawer_social"
                    android:icon="@mipmap/social"
                    android:title="Social" />
                <item
                    android:id="@+id/sign_out_button"
                    android:icon="@mipmap/signout"
                    android:title="Sign Out" />
            </group>
        </menu>
    </item>

</menu>