<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dip"
    android:background="@color/primaryDarkColor"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/headerImageView"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/secondaryColor"
        app:srcCompat="@drawable/logo_balelec" />

</LinearLayout>